force-app/main/default/objects/Course_Class_Type__c/Course_Class_Type__c.object-meta.xml
<CustomObject>
    <label>Course Class Type</label>
    <nameField>
        <displayFormat>CCT-{00000}</displayFormat>
        <label>Course Class Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Class Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>