force-app/main/default/objects/Course_Class_Type__c/fields/Course_Template__c.field-meta.xml
<CustomField>
    <fullName>Course_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Template</label>
    <referenceTo>Course_Template__c</referenceTo>
    <relationshipLabel>Course Class Types</relationshipLabel>
    <relationshipName>Course_Class_Types</relationshipName>
    <type>Lookup</type>
</CustomField>