force-app/main/default/objects/Course_Class_Type__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>End Time</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>