force-app/main/default/objects/Course_Class_Type__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>sked__Location__c</referenceTo>
    <relationshipLabel>Course Class Types</relationshipLabel>
    <relationshipName>Course_Class_Types</relationshipName>
    <type>Lookup</type>
</CustomField>