force-app/main/default/objects/Course_Class_Type__c/fields/Ratio_to_Instructor__c.field-meta.xml
<CustomField>
    <fullName>Ratio_to_Instructor__c</fullName>
    <inlineHelpText>Number of students that requires 1 instructor.</inlineHelpText>
    <label>Ratio to Instructor</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>