force-app/main/default/objects/Course_Class_Type__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <label>Start Time</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>